--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">MarmitApp</string>
+    <string name="label_email">E-mail</string>
+    <string name="label_password">Senha</string>
+    <string name="button_login">Entrar</string>
+    <string name="label_new_account">Ainda não tem conta? Crie uma</string>
+    <string name="button_new_account">Criar conta</string>
+    <string name="label_name">Nome</string>
+    <string name="label_phone">Telefone</string>
+    <string name="header_new_user">Novo Usuário</string>
 </resources>
